# pdi

./: CMakeLists.txt  README.md  pdi.kdev4  pdi.pro
include/: Alerta.h  ProcessaImagem.h  Processamento.h  Roberts_.h  Robinson_.h  Sobel_.h
src/: Alerta.cpp  ProcessaImagem.cpp  Processamento.cpp  Roberts_.cpp  Robinson_.cpp  Sobel_.cpp  main.cpp
